2010-10-06 19:00 adburton

	* data/romset_mgr.builder: Add missing file

2010-10-01 22:15 adburton

	* src/: gui.c, gui.h, gmameui.c, gmameui.h, gmameui-gamelist-view.c: Hide
	  internals of status icons
	* src/gui.c: Change icons used to represent incorrect or best available
	  romsets

2010-09-30 20:00 adburton

	* src/gmameui-rominfo-dlg.c, data/rom_info.builder: Add URLs for CAESAR
	  and MAWS online resources
	* src/gmameui-main-win.c: Remove redundant code

2010-09-23 21:40 adburton

	* src/: gmameui-main-win.c, directories.c: Replace calls to
	  gtk_widget_get_name with gtk_buildable_get_name (fixes Filter buttons)
	* src/gmameui-main-win.c: Only enable Refresh when an exec is
	  available, otherwise possible segfault
	* src/: gmameui-main-win.c, gmameui-ui.xml: Remove romset-specific MAME
	  options menu entry as this feature is not yet supported
	* src/gmameui-gamelist-view.c: Search criteria should not be case
	  sensitive, when search criteria text is changed update the number of
	  romsets matching
	* src/directories.c: Add error message when adding an invalid MAME exec,
	  fix compile warnings
	* data/: rom_info.builder, directories.builder: Add border spacing around
	  vbox elements in notebook

2010-09-19 19:30 adburton

	* src/: directories.c, gmameui-main-win.c, mame_options_dialog.c,
	  mame_options_legacy_dialog.c, mame_options_dialog_helper.c,
	  gmameui-rominfo-dlg.c: GTK 2.20 and GtkBuilder apparently doesn't set the
	  widget name so it can be retrieved using gtk_widget_get_name, so
	  replaced with gtk_buildable_get_name

2010-09-19 14:40 adburton

	* src/: Makefile.am, gmameui-main-win.c, gmameui-main-win.h: Add new file
	  to handle presentation and callbacks for main window
	* src/: callbacks.c, callbacks.h, interface.c, interface.h: Remove and move
	  code into gmameui-main-win.[ch]
	* src/: gui.c, gui.h: Move code into gmameui-main-win.[ch]
	* po/POTFILES.in: Update with new and removed files